(dark mode) fixed flickity dots colours

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -111,6 +111,7 @@
     width: 40px;
     margin: 1px;
     border-radius: 0;
+    background: var(--color-text);
 }
 
 // @media (max-width: 59.99rem) {
